--- a/Currency Converter Website/Assets/style.css
+++ b/Currency Converter Website/Assets/style.css
@@ -1,3 +1,7 @@
+body
+{
+    cursor: default;
+}
 .container
 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
